Verion 0.9.45dev (?? ??? 2004)
  - Updated admin docs to reflect updated info in readme.html & removed
  duplicate info from readme.html
  - Standardized styling for all documentation
  - Put developers notes within php tags for javascript files (less data sent
  to browser)
  - Added title attributes to links
  - Adding labels for form fields
  - Fixed bug 1071619: today border in view_t.php
  - Applied patch 1068220: implementing styles.php in week.php
  - Adjusting iframe height & adding title for editing/adding non-users
  - Enhanced iframe to parent frame refresh behavior for form submittal in new tabbed gui
  - Implemented "main" class in all veiws to hopefully resolve custom header issue
  - Added styles for login.php
  - Moved common tabs js to includes/js/visible.php instead of repeating it
  for each page with tabs
  - Removed links in trailer for assistants, and managing views & reports
  - Modified setting of db parameters.  They are now stored in a data
    file "includes/settings.php".
    When someone tries to access WebCalendar for the first time and this
    file is not found, the user is redirected to a new dbinstall page
    (install/index.php) where the user can set db host/user/password.
  - Added check for webcalendar db tables right after initial db connection.
    Give user an error if tables not found.
  - Modified user-*.php to tell user either "no such user" or
    "incorrect password".  This should help sysadmins trying to setup
    WebCalendar figure out why a login is not working.
    Admins will need to enable $showLoginFailureReason in login.php to
    turn this feature on.  For security reason, the default will be
    to always say "Invalid login."
  - Fixed bug 1061702: site extras (reminder info) not showing up
    properly in event popups
  - Reorganizing styles.php to be more logical
  - Adding new help & '+' images
  - A few minor style changes to remedy problems with views